--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,19 @@ h1 {
   font-weight: 900;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
+h2 {
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-.container-fluid {
-  padding: 3% 15%;
+h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+p {
+  color: #818181;
 }
 
 /* Navigation Bar */
@@ -38,6 +44,11 @@ h1 {
   font-family: "Montserrat";
 }
 
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
 /* Download Button */
 .download-button {
   margin: 5% 3% 5% 0;
@@ -47,4 +58,67 @@ h1 {
 .title-image {
   transform: rotate(25deg);
   width: 60%;
+  margin-left: 10%;
+}
+
+/* Feature Section */
+#features {
+  padding: 7% 15%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+.feature-box {
+  padding: 5%;
+  text-align: center;
+}
+
+.container-fluid {
+  padding: 3% 15%;
+}
+
+/* Testimonials Section */
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+/* Press Section */
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-col {
+  padding: 3% 2%;
 }
